# SynthEditLib

./: .gitignore  CLAUDE.md  CMakeLists.txt  CVoiceList.cpp  CVoiceList.h  CancellationAnalyse.cpp  CancellationAnalyse.h  DspPatchManagerProxy.cpp  DspPatchManagerProxy.h  EventProcessor.cpp  EventProcessor.h  FeedbackTrace.h  HostControls.cpp  HostControls.h  HostVoiceControl.h  HoverScopeAudioCollector.cpp  HoverScopeAudioCollector.h  IDspPatchManager.h  IPluginGui.cpp  IPluginGui.h  IProcessorMessageQues.h  ISeAudioMaster.h  InterfaceObject.cpp  InterfaceObject.h  MidiToCv2.cpp  MidiToCv2.h  Module_Info3.cpp  Module_Info3.h  Module_Info3_base.cpp  Module_Info3_base.h  Module_Info3_internal.h  MpPinIterator.h  MySmartPtr.h  MyTypeTraits.cpp  MyTypeTraits.h  Notify_msg.h  PatchStorage.cpp  PatchStorage.h  README.md  RawConversions.cpp  (+180 more)
modules/: CMakeLists.txt  plugin_helper.cmake
modules/Arpeggiator/: Arpeggiator.cpp  Arpeggiator.h  Arpeggiator.rc  Arpeggiator.xml  CMakeLists.txt
modules/BPMClock3/: BpmClock3.cpp  BpmClock3.h  BpmClock3.xml  BpmClock4.cpp  BpmClock4.h  BpmTempo.cpp  BpmTempo.h  CMakeLists.txt
modules/BoolInverter/: BoolInverterGui.cpp  BoolInverterGui.h  CMakeLists.txt
modules/Bump/: BumpGui.cpp  CMakeLists.txt
modules/Cadmium/: Blob2Test.cpp  CMakeLists.txt
modules/CadmiumRenderer/: CMakeLists.txt  CadmiumRenderer.cpp  RenderGui.cpp  SolidColorBrushGui.cpp  Square.htm  Square.rc  Square.sln  Square.vcxproj  Square.vcxproj.filters  Square.xml  SquareGui.cpp
modules/Controls/: BarLEDMeterGui.cpp  BumpGui.cpp  ButtonGui.cpp  CMakeLists.txt  ControlsBase.h  HSliderGui.cpp  KnobGui.cpp  LEDGui.cpp  LabelGui.cpp  ModWheelGui.cpp  PanelGroupGui.cpp  PlainImageGui.cpp  PostItGui.cpp  Scope4.cpp  Scope4Gui.cpp  SliderGui.cpp  TextEntry.cpp  TextEntryGui.cpp  VUMeterGui.cpp
modules/ControlsXp/: CMakeLists.txt  ClassicControlGuiBase.cpp  ClassicControlGuiBase.h  ControlsXp.xml  DrawKeyboard.h  FreqAnalyser.cpp  FreqAnalyser.h  FreqAnalyser3.cpp  FreqAnalyser3Gui.cpp  FreqAnalyserGui.cpp  FreqAnalyserGui.h  Impulse Response.synthedit  ImpulseResponse2.cpp  ImpulseResponse2Gui.cpp  Keyboard2Gui.cpp  Keyboard2Gui.h  KeyboardMidi.cpp  KeyboardMidiGui.cpp  KeyboardMpe.cpp  KeyboardMpeGui.cpp  ListEntry.cpp  ListEntry.h  ListEntryGui.cpp  ListEntryGui.h  MidiMonitor.cpp  MidiMonitor.h  MidiMonitorGui.cpp  Monitor.cpp  Scope3.cpp  Scope3.h  Scope3Gui.cpp  Scope3Gui.h  Slider.cpp  Slider.h  Slider2.cpp  Slider2.h  Slider2Gui.cpp  Slider2Gui.h  SliderGui.cpp  SliderGui.h  (+12 more)
modules/Converters/: BlobSizeGui.cpp  BlobToBlob2.cpp  BoolSplitterGui.cpp  BoolSplitterGui.h  CMakeLists.txt  CommandTriggerGui.h  Converters.cpp  Converters.h  Converters.synthedit  Converters.xml  ConvertersGui.cpp  ConvertersGui.h  DbToAnimationGui.h  FloatFormula.cpp  FloatFormula.h  FloatFormulaGui.cpp  FloatFormulaGui.h  FloatScaler2Gui.cpp  FloatScaler2Gui.h  FloatToMIDI.cpp  FloatToText.cpp  FloatToVolts2.cpp  ImageToFrameGui.cpp  ImageToFrameGui.h  IntToBoolsGui.cpp  IntToBoolsGui.h  ListToAnimationGui.cpp  ListToTextGui.cpp  MenuToListboxesGui.cpp  UnitConverter.cpp  UnitConverter.h  VoltsToMidiCc.cpp  VoltsToMidiCc.h  my_type_convert.cpp  my_type_convert.h
modules/Converters2/: CMakeLists.txt  Converters2.cpp  StringConcatGui.cpp
modules/Delay3/: CMakeLists.txt  Delay3.cpp
modules/Diagnostic/: BadVoltage.cpp  BlobOverloaderDSP.cpp  BlobOverloaderGUI.cpp  CMakeLists.txt  Diagnostic.rc  Diagnostic.xml  Dignostic.rc
modules/EnvelopeAdsr/: Adsr.cpp  Adsr.h  CMakeLists.txt  Envelope.h  EnvelopeAdsr.rc  EnvelopeAdsr.xml  EnveloperAdsr.rc  envelope.cpp
modules/EnvironmentVariable/: CMakeLists.txt  EnvironmentVariable.cpp
modules/FIR Filters/: CMakeLists.txt  FirFilters.xml  Sinc.h  SincFilter.cpp  SincFilter.h
modules/Filters/: Butterworth Overload Test.synthedit  ButterworthLp.cpp  ButterworthLp.h  CMakeLists.txt  Filters.rc  Filters.xml  IIR_Filters2.cpp  Lookahead.cpp  Lookahead.synthedit  test butterworth.se1
modules/Filters2/: BellTpt.cpp  BellTpt.htm  Butterworth.cpp  ButterworthIir.h  CMakeLists.txt  Chebyshev1.cpp  Chebyshev2.cpp  HighPassTpt.cpp  HighPassTpt.htm  HighShelfTpt.cpp  HighShelfTpt.htm  IirFilterBase.h  LowPass6dB.cpp  LowPass6dB.htm  LowPass6dB_stereo.cpp  LowPass6dB_stereo.htm  LowPassTpt.cpp  LowPassTpt.htm  LowShelfTpt.cpp  LowShelfTpt.htm  OnePoleTpt.h  Rbj.cpp  SvfEq.h  SvfTpt.cpp  SvfTpt.htm
modules/FloatLimiter/: CMakeLists.txt  FloatLimiterGui.cpp  FloatLimiterGui.h
modules/FloatToVolts2/: CMakeLists.txt  FloatToVolts2.cpp
modules/Gain/: CMakeLists.txt  Gain.cpp
modules/Gui Com Test2/: GuiComTest2.cpp  GuiComTest2.h  GuiComTest2.xml  GuiComTest2Gui.cpp
modules/Guitar De Channelizer/: CMakeLists.txt  GuitarDechannelizer.cpp  GuitarDechannelizer.h
modules/ImpulseResponse/: CMakeLists.txt  Impulse.cpp  Impulse.h  ImpulseResponse.cpp  ImpulseResponse.h  ImpulseResponse.xml  ImpulseResponseGui.cpp  ImpulseResponseGui.h
modules/Increment3/: CMakeLists.txt  Increment3Gui.cpp  Increment3Gui.h
modules/Inverter/: CMakeLists.txt  Inverter.cpp
modules/Knob/: CMakeLists.txt  KnobGui.cpp
modules/LED/: CMakeLists.txt  LEDGui.cpp
modules/List Combiner/: CMakeLists.txt  ListCombiner.xml  ListCombinerGui.cpp  ListCombinerGui.h
modules/Logic/: CMakeLists.txt  Gates.cpp  SampleAndHold2.cpp
modules/MIDI Logger/: CMakeLists.txt  IdeLogger.cpp  MidiLogPlayback.cpp  MidiLogPlayback.h  MidiLogger.cpp  MidiLogger.h  MidiLogger.xml
modules/MidiPlayer2/: CMakeLists.txt  MIDIRecorder.cpp  MidiMessage.cpp  MidiPlayer1.cpp  MidiPlayer1.h  MidiPlayer2.cpp  MidiPlayer2.h  MidiPlayer2.xml  MidiToGate.cpp  TriggerToMIDI2.cpp  smf.cpp  smf.h
modules/NoteExpression/: CMakeLists.txt  NoteExpression.cpp  NoteExpression.h  NoteExpression.xml
modules/Oscillator/: CMakeLists.txt  Oscillator.cpp  Oscillator.xml
modules/OscillatorHD/: CMakeLists.txt  OscMipmaps.h  Oscillator.cpp  Oscillator.se1
modules/OscillatorNaive/: CMakeLists.txt  OscillatorNaive.cpp  OscillatorNaive.h  OscillatorNaive.xml
modules/OversamplingControl/: CMakeLists.txt  LatencyTest.cpp  (+3 more)
(+424 files in other folders)
