cmake_minimum_required(VERSION 3.30)

include(plugin_helper.cmake)
include(${GMPI_SDK}/gmpi_plugin.cmake)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/modules)

# Build individual SEM modules
add_subdirectory(Arpeggiator)
add_subdirectory(BoolInverter)
add_subdirectory(BPMClock3)
add_subdirectory(ControlsXp)
add_subdirectory(Controls)
add_subdirectory(Converters)
add_subdirectory(Converters2)
add_subdirectory(Diagnostic)
add_subdirectory(EnvelopeAdsr)
add_subdirectory(Filters)
add_subdirectory(Filters2)
add_subdirectory("FIR Filters")
add_subdirectory(FloatToVolts2)
add_subdirectory("Guitar De Channelizer")
add_subdirectory(FloatLimiter)
add_subdirectory(ImpulseResponse)
add_subdirectory(Increment3)
add_subdirectory(Inverter)
add_subdirectory("List Combiner")
add_subdirectory(Logic)
add_subdirectory("MIDI Logger")
add_subdirectory(MidiPlayer2)
add_subdirectory(NoteExpression)
# add_subdirectory(Oscillator)
add_subdirectory(OscillatorNaive)
add_subdirectory(OversamplingControl)
add_subdirectory(PatchCableDiag)
add_subdirectory(PatchMemory)
add_subdirectory(PolyphonyControl)
add_subdirectory(Reverb)
add_subdirectory("Sample Oscillator2")
add_subdirectory(SampleRate)
add_subdirectory(SoftDistortion)
add_subdirectory(SoundPipe)
add_subdirectory(Special)
add_subdirectory(Spring2)
add_subdirectory("Streaming State")
add_subdirectory(SubControls)
add_subdirectory(SubControlsXp)
add_subdirectory(Switches)
add_subdirectory("System Command")
add_subdirectory(Triggerator)
# not workin ATM add_subdirectory(Unison)
add_subdirectory(UnisonFix)
add_subdirectory(UserSetting)
add_subdirectory(VaFilters)
add_subdirectory(VoiceWatcherBlocker)
add_subdirectory(WaveRecorder2)
add_subdirectory(WavetableOsc)
add_subdirectory(Waveshapers)

# add_subdirectory(CadmiumRenderer)

# GMPI plugins
add_subdirectory(SubControls4)
add_subdirectory(PathEditor)

# Aggregate target so app bundles can depend on "all factory modules built"
# before their POST_BUILD copy fires. Without this, parallel generators (Xcode)
# race the copy against module link jobs, leaving empty bundles that fail
# codesign with "bundle format unrecognized, invalid, or unsuitable".
add_custom_target(factory_modules)
get_property(_modules_subdirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY SUBDIRECTORIES)
foreach(_subdir IN LISTS _modules_subdirs)
    get_property(_targets DIRECTORY ${_subdir} PROPERTY BUILDSYSTEM_TARGETS)
    foreach(_t IN LISTS _targets)
        get_target_property(_type ${_t} TYPE)
        if(_type STREQUAL "MODULE_LIBRARY")
            add_dependencies(factory_modules ${_t})
        endif()
    endforeach()
endforeach()
